# clonifier

./: .gitignore  .gitmodules  .travis.yml  1.worker.js  1.worker_wasm2js.js  2.worker_wasm2js.js  README.md  about.html  assembly.html  assembly.js  build.sh  default.nix  generate_expr_data.R  generate_shims.py  main.bundle.js  package-lock.json  package.json  pcr.html  pcr.js  schramm_data.txt  simple_assembly.html  simple_assembly.js  simple_genome_viewer.html  simple_genome_viewer.js  simple_pcr.html  simple_pcr.js  webpack.common.js  webpack.dev.js  webpack.prod.js  webpack.templates.js  webpack.wasm2js.js  worker.js  worker_wasm2js.js
app/: assembly.tsx  config.ts  db.ts  edit_field.tsx  fragment_list.tsx  index.tsx  info_view.tsx  left_panel.tsx  log_view.tsx  menu.tsx  pcr_view.tsx  primer_list.tsx  seq_view.tsx  settings_view.tsx  tab.tsx  tsconfig.json
app/components/: error_boundary.tsx  list_view.tsx  promise_button.tsx  quick_select.tsx
app/diagram/: circular.tsx  details.tsx  index.tsx  linear.tsx
app/utils/: dialogs.ts  index.ts  io.ts  suspense.ts
app/worker_comms/: index.ts  worker_shims.ts
rust/: Cargo.toml
rust/src/: arc.rs  assembly.rs  assembly_diagram.rs  js_pcr.rs  lib.rs  logger.rs  search.rs  seq_diagram.rs  utils.rs
simple/: assembly.html  assembly.tsx  common.css  common.ts  common.tsx  genome_viewer.css  genome_viewer.html  genome_viewer.tsx  pcr.html  pcr.tsx  tsconfig.json  webpack.js
static/: about.html  assembly.html  guide.html  index.html  style.css  tutorial.html  welcome.html
templates/: build_templates.ts  index.ts  pTrc99a.gb  tsconfig.json
worker/: shared.d.ts  shared.ts  tsconfig.json  worker.ts
