[package]
authors = ["dlesl"]
name = "clonifier"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.10"
gb-io={git = "https://github.com/dlesl/gb-io", features = ["serde"]}
pcr={git="https://github.com/dlesl/pcr"}
assembly={git="https://github.com/dlesl/assembly"}
wasm-bindgen-futures="*"
js-sys = "*"
serde = "*"
serde_derive = "*"
bio = "0.28.2"
bincode = "1.2.0"
itertools = "0.8.0"
svg = "0.6.0"
futures-preview = {version = "0.3.0-alpha.18"}
wasm-typescript-definition = "0.1.4"
log = "*"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.

[dependencies.wasm-bindgen]
version="*"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "*"
features = ["AbortController", "AbortSignal", "console"]